--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
+.background {
+  position: fixed;
+  top: 0;
+  background-image: url("/WindWaker.jpg");
+  height: 100vh;
+  width: 100%;
+  background-position: center;
+  background-size: 110% 110vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  color: #f5f5f5;
+  width: 40%;
+  height: 40%;
+  background-color: #f5f5f560;
 }
